[package]
name = "twelve"
version = "0.1.0"
edition = "2021"
description = "Twelve-factor app configuration for axum"

[dependencies]
anyhow = "1"
async-signal = "0.2"
axum = "0.8"
envy = "0.4"
futures-lite = "2"
maud = "0.27"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9", features = ["postgres"] }
thiserror = "2"
tokio = "1"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
